fixed issue with overflow - sort of

--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,7 @@
 }
 #intro-section {
   background-color: #000;
+  overflow: hidden;
 }
 #intro-section h1 {
   font-family: monospace;
@@ -322,27 +323,25 @@
 #intro-section #design {
   margin-left: 20%;
   top: 12%;
-  animation-delay: 1s;
+  -webkit-animation-delay: 2s;
   color: #FFD700;
 }
 #intro-section #alliance {
   margin-left: 30%;
   top: 20%;
-  animation-delay: 1s;
+  -webkit-animation-delay: 2s;
   Color: #8D38C9;
 }
 #intro-section #creativity {
-  margin-left: 58%;
-  position: relative;
+  margin-left: 32%;
   top: 12%;
-  animation-delay: 1s;
+  -webkit-animation-delay: 1.5s;
   Color: #CBFFFA;
 }
 #intro-section #unleashed {
-  margin-left: 50%;
-  position: relative;
+  margin-left: 42%;
   top: 12%;
-  animation-delay: 1s;
+  -webkit-animation-delay: 1.5s;
   color: #FF0000;
 }
 @media screen and (min-width: 300px) {
