--- a/less/pages/homepage/intro-section.less
+++ b/less/pages/homepage/intro-section.less
@@ -2,152 +2,151 @@
 
 #intro-section {
   background-color: #000;
+  overflow: hidden;
 
   h1{
     font-family: monospace;
     font-weight: bolder;
   }
-   h2{
-      font-family: monospace;
-      font-weight: bolder;
+  h2{
+    font-family: monospace;
+    font-weight: bolder;
+  }
+
+
+
+  #design{
+    margin-left: 20%;
+    top: 12%;
+    -webkit-animation-delay: 2s;
+    color: #FFD700;
+  }
+  #alliance{
+    margin-left: 30%;
+    top: 20%;
+    -webkit-animation-delay: 2s;
+    Color: #8D38C9;
+  }
+  #creativity{
+    margin-left: 32%;
+    top: 12%;
+    -webkit-animation-delay: 1.5s;
+    Color: #CBFFFA;
+  }
+  #unleashed{
+    margin-left: 42%;
+    top: 12%;
+    -webkit-animation-delay: 1.5s;
+    color: #FF0000;
+  }
+
+  //breakpoints
+  @media screen and (min-width:300px) {
+
+    h1{
+      font-size: 2em;
+    }
+    h2{
+      font-size: 1em;
+    }
+
+    .page-container{
+      width: 80%;
+    }
+
+  }
+
+  @media screen and (min-width:400px) {
+
+
+    h1{
+      font-size: 3em;
+    }
+    h2{
+      font-size: 2em;
+    }
+
+    .page-container{
+      width: 80%;
+    }
+
+  }
+
+  @media screen and (min-width:500px) {
+
+    h1{
+      font-size: 4em;
+    }
+    h2{
+      font-size: 3em;
+    }
+    .page-container{
+      width: 80%;
+    }
+  }
+
+  @media screen and (min-width:600px) {
+
+    h1{
+      font-size: 5em;
+    }
+    h2{
+      font-size: 4em;
     }
 
 
+    .page-container{
+      width: 80%;
+    }
 
-#design{
-  margin-left: 20%;
-  top: 12%;
-  animation-delay: 1s;
-  color: #FFD700;
-}
-#alliance{
-  margin-left: 30%;
-  top: 20%;
-  animation-delay: 1s;
-  Color: #8D38C9;
-}
-   #creativity{
-       margin-left: 58%;
-     position: relative;
-     top: 12%;
-     animation-delay: 1s;
-     Color: #CBFFFA;
-   }
-   #unleashed{
-       margin-left: 50%;
-     position: relative;
-     top: 12%;
-     animation-delay: 1s;
-       color: #FF0000;
-   }
+  }
 
-   //breakpoints
-   @media screen and (min-width:300px) {
+  @media screen and (min-width:700px) {
 
-     h1{
-       font-size: 2em;
-     }
-      h2{
-         font-size: 1em;
-       }
+    h1{
+      font-size: 5em;
+    }
+    h2{
+      font-size: 4em;
+    }
 
-       .page-container{
-         width: 80%;
-       }
+    .page-container{
+      width: 80%;
+    }
 
-   }
+  }
 
-   @media screen and (min-width:400px) {
+  @media screen and (min-width:800px) {
 
 
-     h1{
-       font-size: 3em;
-     }
-      h2{
-         font-size: 2em;
-       }
+    .page-container{
+      width: 80%;
+    }
 
-       .page-container{
-         width: 80%;
-       }
+  }
 
-   }
-
-   @media screen and (min-width:500px) {
-
-     h1{
-       font-size: 4em;
-     }
-      h2{
-         font-size: 3em;
-       }
-       .page-container{
-         width: 80%;
-       }
-   }
-
-   @media screen and (min-width:600px) {
-
-     h1{
-       font-size: 5em;
-     }
-      h2{
-         font-size: 4em;
-       }
+  @media screen and (min-width:900px){
 
 
-     .page-container{
-       width: 80%;
-     }
+    .page-container{
+      width: 80%;
+    }
 
-   }
+  }
 
-   @media screen and (min-width:700px) {
+  @media screen and (min-width:1000px){
 
-     h1{
-       font-size: 5em;
-     }
-      h2{
-         font-size: 4em;
-       }
+    h1{
+      font-size: 7em;
+    }
+    h2{
+      font-size: 6em;
+    }
 
-     .page-container{
-       width: 80%;
-     }
+    .page-container{
+      width: 80%;
+    }
 
-   }
-
-   @media screen and (min-width:800px) {
-
-
-       .page-container{
-         width: 80%;
-       }
-
-   }
-
-   @media screen and (min-width:900px){
-
-
-     .page-container{
-       width: 80%;
-     }
-
-   }
-
-   @media screen and (min-width:1000px){
-
-     h1{
-       font-size: 7em;
-     }
-      h2{
-         font-size: 6em;
-       }
-
-          .page-container{
-            width: 80%;
-          }
-
-   }
+  }
 
 }
